test/testData/parser/negative/expressions/arrayOp.c
int i;
float f;
int *pi;
float *pf;

int arr[20];

struct S { int good; };

struct S s, *ps;

void testArray() {
  i[i];
  i[f];
  i[pi];
  i[pf];
  i[arr];
  i[s];
  i[ps];
  f[i];
  f[f];
  f[pi];
  f[pf];
  f[arr];
  f[s];
  f[ps];
  pi[i];
  pi[f];
  pi[pi];
  pi[pf];
  pi[arr];
  pi[s];
  pi[ps];
  pf[i];
  pf[f];
  pf[pi];
  pf[pf];
  pf[arr];
  pf[s];
  pf[ps];
  arr[i];
  arr[f];
  arr[pi];
  arr[pf];
  arr[arr];
  arr[s];
  arr[ps];
  s[i];
  s[f];
  s[pi];
  s[pf];
  s[arr];
  s[s];
  s[ps];
  ps[i];
  ps[f];
  ps[pi];
  ps[pf];
  ps[arr];
  ps[s];
  ps[ps];
}
