test/testData/parser/negative/expressions/arrayOp.err
test/testData/parser/negative/expressions/arrayOp.c:13:3: error: subscripted value is not an array or pointer
test/testData/parser/negative/expressions/arrayOp.c:14:3: error: subscripted value is not an array or pointer
test/testData/parser/negative/expressions/arrayOp.c:15:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:16:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:17:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:18:3: error: subscripted value is not an array or pointer
test/testData/parser/negative/expressions/arrayOp.c:19:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:20:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:21:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:22:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:23:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:24:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:25:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:26:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:27:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:28:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:29:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:30:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:31:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:32:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:33:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:34:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:35:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:36:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:37:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:38:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:39:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:40:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:41:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:42:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:43:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:44:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:45:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:46:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:47:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:48:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:49:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:50:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:51:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:52:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:53:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:54:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:55:3: warning: expression result unused
test/testData/parser/negative/expressions/arrayOp.c:56:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:57:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:58:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:59:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:60:3: error: array subscript is not an integer
test/testData/parser/negative/expressions/arrayOp.c:61:3: error: array subscript is not an integer
